--- a/index.html
+++ b/index.html
@@ -5,13 +5,13 @@
   <meta name="viewport" content="width=device-width,initial-scale=1" />
   <title>WorkVista — Remote Jobs Worldwide</title>
   <meta name="description" content="Remote-first platform connecting job seekers and employers worldwide. Work from anywhere with just a laptop and internet." />
-  <link rel="stylesheet" href="styles_premium.css">
+  <link rel="stylesheet" href="styles.css">
 </head>
 <body>
   <div class="topbar">
     <div class="wrap">
       <div class="nav" role="navigation" aria-label="Primary">
-        <a class="brand" href="index_premium.html" aria-label="Go to Home">
+        <a class="brand" href="index.html" aria-label="Go to Home">
           <div class="logo" aria-hidden="true"></div>
           <div>
             <h1>WorkVista</h1>
@@ -20,8 +20,8 @@
         </a>
 
         <div class="links">
-          <a class="pill active" href="index_premium.html">Home</a>
-          <a class="pill" href="about_premium.html">About & Resources</a>
+          <a class="pill active" href="index.html">Home</a>
+          <a class="pill" href="about.html">About & Resources</a>
           <a class="pill" href="#jobs">Browse Jobs</a>
           <a class="cta secondary" href="#post">Post a Job</a>
           <a class="cta" href="#alerts">Get Job Alerts</a>
